--- a/css/style.css
+++ b/css/style.css
@@ -145,7 +145,6 @@ h2 {
 }
 
 .banner {
-    height: 500px;
     overflow: hidden;
     display: flex;
     justify-content: center;
@@ -156,7 +155,6 @@ h2 {
 
 .banner img {
     width: 100%;
-    height: 700px;
     margin-bottom: 0px;
 
 }
@@ -175,14 +173,14 @@ h2 {
 }
 
 
-.welcome1 {
+/*.welcome1 {
     font-size: 35px;
     margin-top: 40px;
     margin-bottom: 10px;
-}
+}*/
 
 .welcome p {
-    font-size: 60px;
+    /*font-size: 60px;*/
     font-family: "Jockey One", sans-serif;
 }
 
