--- a/css/style.css
+++ b/css/style.css
@@ -55,11 +55,22 @@ header a {
 }
 
 .logo {
-    width:30%;
+    /*width:30%;*/
     height: auto;
-    margin: auto;
+    /*margin: auto;*/   
 
 }
+
+ @media (max-width: 767.98px) {
+        .logo {
+            max-width: 150px; 
+        }
+    }
+    @media (min-width: 768px) { 
+        .logo {
+            max-width: 200px; 
+        }
+    }
 
 
 .social-media {
@@ -74,6 +85,7 @@ header a {
 
 .social-media ul {
     height: 100%;
+    margin-left: 310px;
     
     
 }
@@ -183,6 +195,24 @@ h2 {
     /*font-size: 60px;*/
     font-family: "Jockey One", sans-serif;
 }
+
+#carouselExample {
+    width: 70%; 
+    margin: 50px auto; 
+    border-radius: 15px;
+    border-style:ridge; 
+    border-color: #4d4246;
+}
+
+#carouselExample .carousel-inner img {
+    width: 100%;
+    height: auto;
+    object-fit: cover;
+    border-radius: 15px;
+}
+
+
+
 
 
 /*FIN DE INDEX/*
@@ -379,19 +409,22 @@ button[type="submit"] {
 
 
 footer {
-    display: flex;
-    flex-direction: row;
-    height: 50px;
-    justify-content: space-around;
+    /*display: flex;
+    flex-direction: row;     
+    justify-content: space-around;*/
     align-items: baseline;
+    height: 50px;
+    flex-wrap: wrap;
+
 }
 
 footer ul {
-    display: flex;
-    flex-direction: row;
     color: #ffffff;
-    width: 30%;
-    justify-content: space-between
+    width: 100%;
+    /*display: flex;
+    flex-direction: row;
+    justify-content: space-between*/
+    
 }
 
 
