--- a/sass/partials/_header-footer.scss
+++ b/sass/partials/_header-footer.scss
@@ -13,65 +13,66 @@ header {
     height: 80px;
     padding: 0 10px;
     margin-top: 10px;
+
     a {
         color: white;
         text-decoration: none;
     }
+
     .logo {
-        max-width: 210px;
+        width: 50%;
+
         height: auto;
         /*margin: auto;*/
     }
-    /*
-    @media (max-width: 767.98px) {
-        .logo {
-            max-width: 250px;
-        }
-    }
-    @media (min-width: 768px) {
-        .logo {
-            max-width: 350px;
-        }
-    }*/
-    
 
-        
-    
-    
+
+
+
     .social-media {
         display: flex;
         align-items: center;
-        
-       
+        margin-right: 8%;
+
+
+
+
         img {
             width: 27px;
             margin: 0 5px;
         }
+
         ul {
             height: 100%;
             list-style: none;
             display: flex;
             padding: 0;
-            margin: 0;
+            margin-top: 18px;
         }
+
         li {
             white-space: nowrap;
             margin: 0 10px;
             padding: 0;
         }
     }
+
     nav {
         color: white;
         font-family: "Jersey 25", sans-serif;
         font-size: x-large;
+
+
         ul {
             list-style-type: none;
             flex-wrap: nowrap;
         }
+
         li {
             white-space: nowrap;
             list-style: none;
         }
+
         li {
             list-style: none;
         }
@@ -79,12 +80,15 @@ header {
 }
 
 footer {
-    /*display: flex;
-    flex-direction: row;     
-    justify-content: space-around;*/
+
     align-items: baseline;
-    height: 50px;
+    height: auto;
     flex-wrap: wrap;
+    position: relative;
+    padding-top: 100px;
+    padding-bottom: 10px;
+
+
 
     ul {
         color: #ffffff;
@@ -92,11 +96,35 @@ footer {
         /*display: flex;
         flex-direction: row;
         justify-content: space-between*/
+
+        li {
+            font-size: 16px;
+        }
+
+       
+
+
     }
+    
 
     p {
         margin: 8px;
+        font-size: 18px;
     }
+
+    
+    .logo-footer {
+        display: flex;
+    } 
+    .social-media-footer {
+        display: none;
+    }
+
 
 }
 
+
+
+.responsive-footer {
+    display: none;
+} 
