--- a/sass/partials/_games.scss
+++ b/sass/partials/_games.scss
@@ -6,6 +6,18 @@
     padding: 60px;
     font-size: xx-large;
     justify-content: center;
+    
+    
+}
+
+.h1games {
+    
+    margin-top: 80px;   
+    margin-bottom: 20px; 
+    margin-left: 22%;
+    color: #ffffff;    
+    font-size: 3em;     
+    
 }
 
 
