--- a/css/estilos.css
+++ b/css/estilos.css
@@ -144,7 +144,7 @@ footer .social-media-footer {
 }
 
 .welcome1 {
-  font-size: 170%;
+  font-size: 280%;
   margin-top: 40px;
   margin-bottom: 10px;
 }
@@ -177,6 +177,14 @@ footer .social-media-footer {
   padding: 60px;
   font-size: xx-large;
   justify-content: center;
+}
+
+.h1games {
+  margin-top: 80px;
+  margin-bottom: 20px;
+  margin-left: 22%;
+  color: #ffffff;
+  font-size: 3em;
 }
 
 .mechanophagia {
@@ -260,7 +268,7 @@ main {
 }
 .aboutus-grid h1 {
   color: #ffffff;
-  font-size: 55px;
+  Font-size: 3em;
   margin-bottom: 15px;
   margin-top: 50px;
   grid-area: titulo;
@@ -292,27 +300,6 @@ main {
   border-radius: 15px;
 }
 
-/* Opcional: Responsive básico para pantallas pequeñas */
-@media (max-width: 768px) {
-  .aboutus-grid {
-    grid-template-columns: 1fr; /* En pantallas pequeñas, una sola columna */
-    grid-template-areas: "titulo" "texto1" "wilmar" "wichu";
-  }
-  .texto1 {
-    padding: 0 15px;
-  }
-  .texto-aboutus p {
-    margin: 30px auto 0 auto;
-    font-size: 150%;
-  }
-  .galeria-aboutus {
-    gap: 20px;
-    margin-top: 30px;
-  }
-  .galeria-aboutus img {
-    height: 300px;
-  }
-}
 form {
   color: #f3dbdb;
   width: 350px;
@@ -347,6 +334,14 @@ form .checkbox-group {
   margin-bottom: 15px;
   margin-top: 10px;
   align-items: center;
+}
+
+.contact-h1 {
+  text-align: center;
+  margin-bottom: 30px;
+  color: #ffffff;
+  font-size: 3em;
+  margin-top: 50px;
 }
 
 .checkbox-group p {
@@ -404,6 +399,8 @@ form .checkbox-group {
 h1 {
   margin-top: 20px;
   margin-bottom: 20px;
+  justify-content: center;
+  margin-left: 0;
 }
 
 /* Media Queries */
