--- a/sass/partials/_contact.scss
+++ b/sass/partials/_contact.scss
@@ -44,6 +44,14 @@ form {
 
 }
 
+.contact-h1 {
+    text-align: center; 
+    margin-bottom: 30px; 
+    color: $blanco; 
+    font-size: 3em; 
+    margin-top: 50px; 
+}
+
 .checkbox-group p {
     margin: 0;
     padding: 0;
