--- a/sass/partials/_header-footer.scss
+++ b/sass/partials/_header-footer.scss
@@ -115,6 +115,7 @@ footer {
     
     .logo-footer {
         display: flex;
+        width: 100px;
     } 
     .social-media-footer {
         display: none;
@@ -124,7 +125,3 @@ footer {
 }
 
 
-
-.responsive-footer {
-    display: none;
-} 
