--- a/css/estilos.css
+++ b/css/estilos.css
@@ -108,12 +108,9 @@ footer p {
 }
 footer .logo-footer {
   display: flex;
+  width: 100px;
 }
 footer .social-media-footer {
-  display: none;
-}
-
-.responsive-footer {
   display: none;
 }
 
@@ -564,7 +561,7 @@ h1 {
     gap: 10px 15px;
   }
   footer .logo-footer {
-    width: 20%;
+    width: 40%;
   }
 }
 @media (min-width: 576px) and (max-width: 767.98px) {
@@ -674,11 +671,13 @@ h1 {
     justify-content: center;
     flex-wrap: wrap;
   }
-  footer .desktop-footer {
-    display: none;
-  }
-  footer .responsive-footer {
-    display: flex;
+  footer .logo-footer {
+    width: 12%;
+    position: absolute;
+    margin-top: 60px;
+    margin-left: 29%;
+    margin-bottom: 200px;
+    padding-bottom: 60px;
   }
 }
 /* ABOUT US */
@@ -686,7 +685,6 @@ h1 {
   .aboutus-grid {
     grid-template-columns: 1fr;
     grid-template-areas: "titulo" "texto1" "wilmar" "wichu";
-    margin-top: 0;
   }
   .texto1 {
     padding: 0 15px;
