--- a/css/estilos.css
+++ b/css/estilos.css
@@ -386,6 +386,10 @@ form .checkbox-group {
   content: "✓";
 }
 
+footer {
+  margin-top: 200px;
+}
+
 .pitchmain {
   display: flex;
   flex-direction: column;
@@ -716,6 +720,7 @@ h1 {
     width: 380px;
   }
 }
+/*CONTACT US*/
 /*font-family: "Jersey 25", sans-serif;
   font-weight: 400;
   font-style: normal;
